runtime/parse/generated/JuliaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Julia.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace HyperSphere {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class JuliaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Symbol=1, AbstractType=2, Using=3, Extend=4, Global=5, Const=6, Local=7, 
		Mutable=8, Function=9, Module=10, Struct=11, For=12, Goto=13, If=14, Else=15, 
		ElseIf=16, Return=17, Continue=18, Do=19, End=20, LeftParen=21, RightParen=22, 
		LeftBracket=23, RightBracket=24, LeftBrace=25, RightBrace=26, And=27, 
		Or=28, Caret=29, Not=30, Tilde=31, Plus=32, Minus=33, Star=34, Div=35, 
		Mod=36, LeftShift=37, RightShift=38, Operator=39, Less=40, LessEqual=41, 
		Greater=42, GreaterEqual=43, ComparisonOperator=44, ShortAnd=45, ShortOr=46, 
		ShortcutOperator=47, Question=48, Colon=49, ValueType=50, Semi=51, Comma=52, 
		Assign=53, Arrow=54, Dot=55, Splat=56, Termination=57, AugmentedAssignment=58, 
		Assignment=59, Constant=60, Identifier=61, IntegerConstant=62, DecimalConstant=63, 
		NewLine=64, Whitespace=65, BlockComment=66, LineComment=67;
	public const int
		RULE_script = 0, RULE_moduleExpr = 1, RULE_moduleVariableDeclaration = 2, 
		RULE_module = 3, RULE_moduleExprStatement = 4, RULE_usingModule = 5, RULE_moduleRef = 6, 
		RULE_moduleIdentifier = 7, RULE_symbolIdentifier = 8, RULE_abstractStructure = 9, 
		RULE_implementedStructure = 10, RULE_structure = 11, RULE_structField = 12, 
		RULE_structItem = 13, RULE_blockExpr = 14, RULE_blockExprStatement = 15, 
		RULE_blockVariableInstatiation = 16, RULE_blockArg = 17, RULE_blockVariableDeclaration = 18, 
		RULE_function = 19, RULE_functionHeader = 20, RULE_functionItem = 21, 
		RULE_functionCall = 22, RULE_shortFunction = 23, RULE_longFunction = 24, 
		RULE_tuple = 25, RULE_namedTuple = 26, RULE_typetuple = 27, RULE_tupleList = 28, 
		RULE_typeName = 29, RULE_parameterizedType = 30, RULE_type = 31, RULE_endExpr = 32;
	public static readonly string[] ruleNames = {
		"script", "moduleExpr", "moduleVariableDeclaration", "module", "moduleExprStatement", 
		"usingModule", "moduleRef", "moduleIdentifier", "symbolIdentifier", "abstractStructure", 
		"implementedStructure", "structure", "structField", "structItem", "blockExpr", 
		"blockExprStatement", "blockVariableInstatiation", "blockArg", "blockVariableDeclaration", 
		"function", "functionHeader", "functionItem", "functionCall", "shortFunction", 
		"longFunction", "tuple", "namedTuple", "typetuple", "tupleList", "typeName", 
		"parameterizedType", "type", "endExpr"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'using'", "'<:'", "'global'", "'const'", "'local'", 
		"'mutable'", "'function'", "'module'", "'struct'", "'for'", "'goto'", 
		"'if'", "'else'", "'elseif'", "'return'", "'continue'", "'do'", "'end'", 
		"'('", "')'", "'['", "']'", "'{'", "'}'", "'&'", "'|'", "'^'", "'!'", 
		"'~'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<<'", "'>>'", null, "'<'", 
		"'<='", "'>'", "'>='", null, "'&&'", "'||'", null, "'?'", "':'", "'::'", 
		"';'", "','", "'='", "'->'", "'.'", "'...'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Symbol", "AbstractType", "Using", "Extend", "Global", "Const", 
		"Local", "Mutable", "Function", "Module", "Struct", "For", "Goto", "If", 
		"Else", "ElseIf", "Return", "Continue", "Do", "End", "LeftParen", "RightParen", 
		"LeftBracket", "RightBracket", "LeftBrace", "RightBrace", "And", "Or", 
		"Caret", "Not", "Tilde", "Plus", "Minus", "Star", "Div", "Mod", "LeftShift", 
		"RightShift", "Operator", "Less", "LessEqual", "Greater", "GreaterEqual", 
		"ComparisonOperator", "ShortAnd", "ShortOr", "ShortcutOperator", "Question", 
		"Colon", "ValueType", "Semi", "Comma", "Assign", "Arrow", "Dot", "Splat", 
		"Termination", "AugmentedAssignment", "Assignment", "Constant", "Identifier", 
		"IntegerConstant", "DecimalConstant", "NewLine", "Whitespace", "BlockComment", 
		"LineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Julia.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static JuliaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public JuliaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public JuliaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ScriptContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(JuliaParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ModuleExprContext moduleExpr() {
			return GetRuleContext<ModuleExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModuleExprStatementContext[] moduleExprStatement() {
			return GetRuleContexts<ModuleExprStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModuleExprStatementContext moduleExprStatement(int i) {
			return GetRuleContext<ModuleExprStatementContext>(i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_script; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.EnterScript(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.ExitScript(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaVisitor<TResult> typedVisitor = visitor as IJuliaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScript(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScriptContext script() {
		ScriptContext _localctx = new ScriptContext(Context, State);
		EnterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Eof:
				{
				State = 66;
				Match(Eof);
				}
				break;
			case AbstractType:
			case Using:
			case Global:
			case Const:
			case Local:
			case Mutable:
			case Module:
			case Struct:
			case Termination:
			case Identifier:
				{
				{
				State = 73;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
				case 1:
					{
					State = 67;
					moduleExpr();
					}
					break;
				case 2:
					{
					State = 69;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do {
						{
						{
						State = 68;
						moduleExprStatement();
						}
						}
						State = 71;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AbstractType) | (1L << Using) | (1L << Global) | (1L << Const) | (1L << Local) | (1L << Mutable) | (1L << Module) | (1L << Struct) | (1L << Termination) | (1L << Identifier))) != 0) );
					}
					break;
				}
				State = 75;
				Match(Eof);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StructureContext structure() {
			return GetRuleContext<StructureContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModuleVariableDeclarationContext moduleVariableDeclaration() {
			return GetRuleContext<ModuleVariableDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModuleContext module() {
			return GetRuleContext<ModuleContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsingModuleContext usingModule() {
			return GetRuleContext<UsingModuleContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockExprContext blockExpr() {
			return GetRuleContext<BlockExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Termination() { return GetToken(JuliaParser.Termination, 0); }
		public ModuleExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moduleExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.EnterModuleExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.ExitModuleExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaVisitor<TResult> typedVisitor = visitor as IJuliaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModuleExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleExprContext moduleExpr() {
		ModuleExprContext _localctx = new ModuleExprContext(Context, State);
		EnterRule(_localctx, 2, RULE_moduleExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Termination) {
				{
				State = 79;
				Match(Termination);
				}
			}

			State = 87;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				State = 82;
				structure();
				}
				break;
			case 2:
				{
				State = 83;
				moduleVariableDeclaration();
				}
				break;
			case 3:
				{
				State = 84;
				module();
				}
				break;
			case 4:
				{
				State = 85;
				usingModule();
				}
				break;
			case 5:
				{
				State = 86;
				blockExpr();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleVariableDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BlockArgContext blockArg() {
			return GetRuleContext<BlockArgContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Const() { return GetToken(JuliaParser.Const, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Local() { return GetToken(JuliaParser.Local, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockVariableInstatiationContext blockVariableInstatiation() {
			return GetRuleContext<BlockVariableInstatiationContext>(0);
		}
		public ModuleVariableDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moduleVariableDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.EnterModuleVariableDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.ExitModuleVariableDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaVisitor<TResult> typedVisitor = visitor as IJuliaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModuleVariableDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleVariableDeclarationContext moduleVariableDeclaration() {
		ModuleVariableDeclarationContext _localctx = new ModuleVariableDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_moduleVariableDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Const) {
				{
				State = 89;
				Match(Const);
				}
			}

			State = 93;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Local) {
				{
				State = 92;
				Match(Local);
				}
			}

			State = 95;
			blockArg();
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Assignment) {
				{
				State = 96;
				blockVariableInstatiation();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Module() { return GetToken(JuliaParser.Module, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(JuliaParser.Identifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public EndExprContext endExpr() {
			return GetRuleContext<EndExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModuleExprContext[] moduleExpr() {
			return GetRuleContexts<ModuleExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModuleExprContext moduleExpr(int i) {
			return GetRuleContext<ModuleExprContext>(i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.EnterModule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.ExitModule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaVisitor<TResult> typedVisitor = visitor as IJuliaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleContext module() {
		ModuleContext _localctx = new ModuleContext(Context, State);
		EnterRule(_localctx, 6, RULE_module);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 99;
			Match(Module);
			State = 100;
			Match(Identifier);
			State = 104;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 101;
					moduleExpr();
					}
					} 
				}
				State = 106;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			}
			State = 107;
			endExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleExprStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ModuleExprContext moduleExpr() {
			return GetRuleContext<ModuleExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Termination() { return GetToken(JuliaParser.Termination, 0); }
		public ModuleExprStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moduleExprStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.EnterModuleExprStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.ExitModuleExprStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaVisitor<TResult> typedVisitor = visitor as IJuliaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModuleExprStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleExprStatementContext moduleExprStatement() {
		ModuleExprStatementContext _localctx = new ModuleExprStatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_moduleExprStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			moduleExpr();
			State = 110;
			Match(Termination);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsingModuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Using() { return GetToken(JuliaParser.Using, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ModuleRefContext moduleRef() {
			return GetRuleContext<ModuleRefContext>(0);
		}
		public UsingModuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usingModule; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.EnterUsingModule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.ExitUsingModule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaVisitor<TResult> typedVisitor = visitor as IJuliaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsingModule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsingModuleContext usingModule() {
		UsingModuleContext _localctx = new UsingModuleContext(Context, State);
		EnterRule(_localctx, 10, RULE_usingModule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112;
			Match(Using);
			State = 113;
			moduleRef();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleRefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Identifier() { return GetTokens(JuliaParser.Identifier); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier(int i) {
			return GetToken(JuliaParser.Identifier, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Dot() { return GetTokens(JuliaParser.Dot); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Dot(int i) {
			return GetToken(JuliaParser.Dot, i);
		}
		public ModuleRefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moduleRef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.EnterModuleRef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.ExitModuleRef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaVisitor<TResult> typedVisitor = visitor as IJuliaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModuleRef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleRefContext moduleRef() {
		ModuleRefContext _localctx = new ModuleRefContext(Context, State);
		EnterRule(_localctx, 12, RULE_moduleRef);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 115;
					Match(Identifier);
					State = 116;
					Match(Dot);
					}
					} 
				}
				State = 121;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			}
			State = 122;
			Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleIdentifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ModuleRefContext moduleRef() {
			return GetRuleContext<ModuleRefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Dot() { return GetToken(JuliaParser.Dot, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(JuliaParser.Identifier, 0); }
		public ModuleIdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moduleIdentifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.EnterModuleIdentifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.ExitModuleIdentifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaVisitor<TResult> typedVisitor = visitor as IJuliaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModuleIdentifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleIdentifierContext moduleIdentifier() {
		ModuleIdentifierContext _localctx = new ModuleIdentifierContext(Context, State);
		EnterRule(_localctx, 14, RULE_moduleIdentifier);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			moduleRef();
			State = 125;
			Match(Dot);
			State = 126;
			Match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SymbolIdentifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ModuleIdentifierContext moduleIdentifier() {
			return GetRuleContext<ModuleIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(JuliaParser.Identifier, 0); }
		public SymbolIdentifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_symbolIdentifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.EnterSymbolIdentifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IJuliaListener typedListener = listener as IJuliaListener;
			if (typedListener != null) typedListener.ExitSymbolIdentifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJuliaVisitor<TResult> typedVisitor = visitor as IJuliaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSymbolIdentifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SymbolIdentifierContext symbolIdentifier() {
		SymbolIdentifierContext _localctx = new SymbolIdentifierContext(Context, State);
		EnterRule(_localctx, 16, RULE_symbolIdentifier);
		try {
			State = 130;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 128;
				moduleIdentifier();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 129;
				Match(Identifier);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
